# Qt6-Cava-plugin

./: CMakeLists.txt  README.md  cava.qml  cavamonitor.cpp  cavamonitor.hpp  flake.nix  result
